# aspiicspy

./: README.md  generate_colormap.py  pyproject.toml  read_L2.py  test.py
.github/workflows/: publish-to-testpypi.yml
aspiicspy/: generate_colormap.py  read_L2.py  utils.py
aspiicspy/.github/workflows/: publish-to-testpypi.yml
aspiicspy/cmap_file/: he_colormap.txt  ne_colormap.txt  wb_colormap.txt
cmap_file/: fe_colormap.txt  p_colormap.txt
